// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge default 1`] = `
<div>
  <span
    class="p-badge p-component p-badge-dot"
  />
</div>
`;

exports[`Badge severity danger 1`] = `
<div>
  <span
    class="p-badge p-component p-badge-dot p-badge-danger"
  />
</div>
`;

exports[`Badge severity info 1`] = `
<div>
  <span
    class="p-badge p-component p-badge-dot p-badge-info"
  />
</div>
`;

exports[`Badge severity invalid 1`] = `
<div>
  <span
    class="p-badge p-component p-badge-dot p-badge-invalid"
  />
</div>
`;

exports[`Badge severity success 1`] = `
<div>
  <span
    class="p-badge p-component p-badge-dot p-badge-success"
  />
</div>
`;

exports[`Badge severity warning 1`] = `
<div>
  <span
    class="p-badge p-component p-badge-dot p-badge-warning"
  />
</div>
`;

exports[`Badge size invalid 1`] = `
<div>
  <span
    class="p-badge p-component p-badge-dot"
  />
</div>
`;

exports[`Badge size large 1`] = `
<div>
  <span
    class="p-badge p-component p-badge-dot p-badge-lg"
  />
</div>
`;

exports[`Badge size xlarge 1`] = `
<div>
  <span
    class="p-badge p-component p-badge-dot p-badge-xl"
  />
</div>
`;

exports[`Badge value 1`] = `
<div>
  <span
    class="p-badge p-component"
  >
    22
  </span>
</div>
`;
